--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,9 @@
   ],
   "dependencies": {
     "bootstrap": "v3.3.5",
-    "bootswatch": "v3.3.5+4"
+    "bootstrap-validator": "v0.9.0",
+    "bootswatch": "v3.3.5+4",
+    "handlebars": "v4.0.3",
+    "jquery": "v2.1.4"
   }
 }
